# nhcs

./: .gitignore  CLAUDE.md  README.md  RUN008_REPORT.md  RUN_RESULTS.md  build_gallery.py  collect_dataset.py  gallery.html  info.md  pyproject.toml  rate.py  run005.py  run008.py  run_demo.bat  script.py  test.html  test.md  test2.md  test4.md
.gemini-agent/: config.json
configs/: coil_array_dodec12.yaml  colloid_fe3o4.yaml  crim_pid.yaml  default.yaml
data/: nhcs_run_001.csv  nhcs_run_001.db  nhcs_run_002.csv  nhcs_run_002.db  nhcs_run_003.csv  nhcs_run_003.db  nhcs_run_004.csv  nhcs_run_004.db  nhcs_run_005.csv  nhcs_run_005.db  nhcs_run_006.csv  nhcs_run_006.db  nhcs_run_007.csv  nhcs_run_007.db  nhcs_run_008_summary.csv  nhcs_run_008_t50_balanced.csv  nhcs_run_008_t50_balanced.db  nhcs_run_008_t50_baseline.csv  nhcs_run_008_t50_baseline.db  nhcs_run_008_t50_embed_heavy.csv  nhcs_run_008_t50_embed_heavy.db  nhcs_run_008_t50_shape_heavy.csv  nhcs_run_008_t50_shape_heavy.db  nhcs_run_008_t60_balanced.csv  nhcs_run_008_t60_balanced.db  nhcs_run_008_t60_baseline.csv  nhcs_run_008_t60_baseline.db  nhcs_run_008_t60_embed_heavy.csv  nhcs_run_008_t60_embed_heavy.db  nhcs_run_008_t60_shape_heavy.csv  nhcs_run_008_t60_shape_heavy.db  nhcs_run_008_t70_balanced.csv  nhcs_run_008_t70_balanced.db  nhcs_run_008_t70_baseline.csv  nhcs_run_008_t70_baseline.db  nhcs_run_008_t70_embed_heavy.csv  nhcs_run_008_t70_embed_heavy.db  nhcs_run_008_t70_shape_heavy.csv  nhcs_run_008_t70_shape_heavy.db
more/: nhcs_architecture.html  nhcs_layer1_genesis_core.html  nhcs_threejs_all_layers.html  (+2 more)
(+80 files in other folders)
